Add basic game logic
The first step is complete. The game logic is there with the buttons
successfully playing a game and deciding a winner of each round. There
is also a score tracker.

Next steps to add:

- Logic behind announcing winner after 5 games
- Reset button
- Elegant styling

--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="scripts.js" defer></script>
     <title>Rock Paper Scissors</title>
+    <div class="header">
+        <h1>You must play 5 games of Rock Paper Scissors vs the computer to survive.</h1>
+            <p class="score"></p>
+    </div>
+    <button class="rock">Rock</button>
+    <button class="paper">Paper</button>
+    <button class="scissors">Scissors</button>
+    <div class="gameplay"></div>
 </head>
 <body>
     
-    <script src="scripts.js"></script>
 </body>
 </html>
