--- a/index.html
+++ b/index.html
@@ -6,16 +6,24 @@
     <link rel="stylesheet" href="style.css">
     <script src="scripts.js" defer></script>
     <title>Rock Paper Scissors</title>
-    <div class="header">
-        <h1>You must play 5 games of Rock Paper Scissors vs the computer to survive.</h1>
-            <p class="score"></p>
-    </div>
-    <button class="rock">Rock</button>
-    <button class="paper">Paper</button>
-    <button class="scissors">Scissors</button>
-    <div class="gameplay"></div>
 </head>
 <body>
-    
+    <div class="header">
+        <h1 class="titleText">You must win 5 games of Rock Paper Scissors against me to survive.</h1>
+        <h2 class="subtext">Ready? Make your move.</h2>
+    </div>
+    <div class="score-container">
+        <p class="score"></p>
+    </div>
+    <div class="buttons">
+        <div class="top-buttons">
+        <button class="rock"><img class="move-icon" src="images/rock.jpg" alt="rock icon"></button>
+        <button class="paper"><img class="move-icon" src="images/paper.jpg" alt="paper icon"></button>
+        <button class="scissors"><img class="move-icon" src="images/scissors.jpg" alt="scissors icon"></button>  
+        </div>
+    <div class="reset-container">
+    <button class="reset">Reset</button>
+    </div>
+    <div class="gameplay"></div>
 </body>
 </html>
